--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,16 @@
     <script type="systemjs-importmap">
       {
         "imports": {
-          "@base": "%PUBLIC_URL%/main.js"
+          "@microapp/base": "%PUBLIC_URL%/main.js",
+          "antd": "%PUBLIC_URL%/library/antd.js",
+          "axios": "%PUBLIC_URL%/library/axios.js",
+          "lodash": "%PUBLIC_URL%/library/lodash.js",
+          "moment": "%PUBLIC_URL%/library/moment.js",
+          "moment-timezone": "%PUBLIC_URL%/library/moment.js",
+          "react": "%PUBLIC_URL%/library/react.js",
+          "react-router": "%PUBLIC_URL%/library/react-router.js",
+          "react-dom": "%PUBLIC_URL%/library/react-dom.js",
+          "react-dom/server": "%PUBLIC_URL%/library/react-dom-server.js"
         }
       }
     </script>
@@ -35,7 +44,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script>
-      System.import("@base");
+      System.import("@microapp/base");
     </script>
     <!--
       This HTML file is a template.
