--- a/public/index.html
+++ b/public/index.html
@@ -22,22 +22,10 @@
     <meta name="importmap-type" content="systemjs-importmap" />
     <script src="%PUBLIC_URL%/library/systemjs/system.min.js"></script>
     <script src="%PUBLIC_URL%/library/systemjs/extras/named-exports.min.js"></script>
-    <script type="systemjs-importmap">
-      {
-        "imports": {
-          "@microapp/base": "%PUBLIC_URL%/main.js",
-          "antd": "%PUBLIC_URL%/library/antd.js",
-          "axios": "%PUBLIC_URL%/library/axios.js",
-          "lodash": "%PUBLIC_URL%/library/lodash.js",
-          "moment": "%PUBLIC_URL%/library/moment.js",
-          "moment-timezone": "%PUBLIC_URL%/library/moment.js",
-          "react": "%PUBLIC_URL%/library/react.js",
-          "react-router": "%PUBLIC_URL%/library/react-router.js",
-          "react-dom": "%PUBLIC_URL%/library/react-dom.js",
-          "react-dom/server": "%PUBLIC_URL%/library/react-dom-server.js"
-        }
-      }
-    </script>
+    <script
+      type="systemjs-importmap"
+      src="%PUBLIC_URL%/library/importmap.json"
+    ></script>
     <link href="%PUBLIC_URL%/main.css" rel="stylesheet" />
   </head>
   <body>
